fichiers master_slave.* ajoutés pour mpi pur

--- a/part1/mpi_pur/Makefile
+++ b/part1/mpi_pur/Makefile
@@ -1,12 +1,13 @@
 target: decide
 
 CFLAGS=-g -O3 -std=c99
+CC = mpicc
 
-main.o: main.c projet.h
+main.o: main.c projet.h master_slave.h
 aux.o: aux.c projet.h
+master_slave.o: master_slave.c master_slave.h projet.h 
 
-
-decide: main.o aux.o
+decide: main.o aux.o master_slave.o
 	$(CC) $(CFLAGS) $^ -o $@
 
 .PHONY: clean
