--- a/part1/Makefile
+++ b/part1/Makefile
@@ -12,7 +12,7 @@ clean:
 
 exec:
 	cd openMP/ && export OMP_NUM_THREADS=2 &&./decide "4k//4K/4P w"
-	cd mpi_pur/ && mpirun -np 5 -hostfile "file" --map -bynode ./decide "4k//4K/4P w"
-	cd mpi_openMP/ && mpirun -np 5 -hostfile "file" --map -bynode ./decide "4k//4K/4P w"
+	cd mpi_pur/ && mpirun -np 5 -hostfile hostfile --map-by node ./decide "4k//4K/4P w"
+	cd mpi_openMP/ && mpirun -np 5 -hostfile hostfile --map-by node ./decide "4k//4K/4P w"
 
 .PHONY : exe clean
