--- a/part1/Makefile
+++ b/part1/Makefile
@@ -1,6 +1,6 @@
-all: exe
+all: compile
 
-exe:
+compile:
 	make -C ./openMP
 	make -C ./mpi_pur
 	make -C ./mpi_openMP
@@ -11,9 +11,12 @@ clean:
 	make clean -C ./mpi_openMP
 
 exec:
-	cd openMP/ && export OMP_NUM_THREADS=2 &&./decide "4k//4K/4P w"
-	cd mpi_pur/ && mpirun -np 5 -hostfile hostfile --map-by node ./decide "4k//4K/4P w"
-	cd mpi_openMP/ && mpirun -np 5 -hostfile hostfile --map-by node ./decide "4k//4K/4P w"
+	make exec -C ./openMP
+	make exec -C ./mpi_pur
+	make exec -C ./mpi_openMP
+	#cd openMP/ && export OMP_NUM_THREADS=2 &&./decide "4k//4K/4P w"
+	#cd mpi_pur/ && mpirun -np 5 -hostfile hostfile --map-by node ./decide "4k//4K/4P w"
+	#cd mpi_openMP/ && mpirun -np 5 -hostfile hostfile --map-by node ./decide "4k//4K/4P w"
 
-.PHONY : exe clean
+.PHONY : compile clean
 
