--- a/part1/openMP/Makefile
+++ b/part1/openMP/Makefile
@@ -9,7 +9,10 @@ aux.o: aux.c projet.h
 decide: main.o aux.o
 	$(CC) $(CFLAGS) $^ -o $@
 
+exec: decide
+	export OMP_NUM_THREADS=2 &&./decide "4k//4K/4P w"
+
 clean:
 	rm -f *.o decide
 
-.PHONY: clean
+.PHONY: clean exec
